// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DCategory should render correct markup when prop is correct 1`] = `
<div
  class="text-truncate"
>
  
  category en

</div>
`;

exports[`DCategory should render correct markup when prop is falsy 1`] = `
<div
  class="text-truncate"
>
  
  others

</div>
`;

exports[`DCategory should render correct markup when prop is falsy 2`] = `
<div
  class="text-truncate"
>
  
  others

</div>
`;

exports[`DCategory should render correct markup when prop is falsy 3`] = `
<div
  class="text-truncate"
>
  
  others

</div>
`;
